--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "install": "^0.12.2",
     "isomorphic-unfetch": "2.0.0",
     "jest-styled-components": "^6.3.4",
-    "next": "8.1.0",
+    "next": "^9.1.4",
     "next-images": "^1.1.1",
     "next-redux-wrapper": "^3.0.0-alpha.2",
     "next-routes": "^1.4.2",
     "npm": "^6.9.0",
     "prop-types": "^15.7.2",
-    "react": "16.8.6",
+    "react": "^16.12.0",
     "react-datepicker": "^2.9.6",
-    "react-dom": "16.8.6",
+    "react-dom": "^16.12.0",
     "react-redux": "^7.0.2",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
