--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-redux-wrapper": "^3.0.0-alpha.2",
     "next-routes": "^1.4.2",
     "npm": "^6.9.0",
+    "npm-check-updates": "^4.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-datepicker": "^2.9.6",
